[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/EnemySpawner.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 206, 46 )

[sub_resource type="RectangleShape2D" id=2]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="EnemyArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyArea"]
shape = SubResource( 2 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
